@@ -125,6 +125,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Remove entries from redirect table on article deletion
 * (bug 7788) Force section headers in new section links for users who have
   'prompt for blank edit summaries' on.
+* (bug 7723) Add ic: parser function, with alias tc:, which capitalises the first
+   letter of each word.
 
 == Languages updated ==
 
